# SimpleWindow

./: README.md  pyproject.toml  setup.py
.github/workflows/: python.yml
SimpleWindow/: SimpleWindow.py  __init__.py  module.py
