[project]
name = "SimpleWindow"
version = "0.1"
description = "A package to easily create windows in Python using PyOpenGL, GLFW, OpenCV-Python, NumPy, pywin32 and ctypes"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ "name" = "Glas42" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = ["pyopengl", "glfw", "opencv-python", "numpy", "pywin32"]